Integracion de token

--- a/templates/adopcion/solicitud_form.html
+++ b/templates/adopcion/solicitud_form.html
@@ -7,7 +7,7 @@
 	{% csrf_token %}
 	{{form2.as_p}}
 	{{form.as_p}}
-	<button type="sumbit">Guardar</button>
+	<button type="submit">Guardar</button>
 
 
 </form>
