--- a/templates/mascota/mascota_form.html
+++ b/templates/mascota/mascota_form.html
@@ -6,7 +6,7 @@
 <form method="post" enctype="multipart/form-data">
 	{% csrf_token %}
 	{{form.as_p}}
-	<button type="sumbit">Guardar</button>
+	<button type="submit">Guardar</button>
 
 
 </form>
