--- a/templates/mascota/mascota_list.html
+++ b/templates/mascota/mascota_list.html
@@ -27,7 +27,11 @@
 			<td>{{ mascota.edad_aproximada }}</td>
 			<td>{{ mascota.fecha_rescate }}</td>
 			<td>{{ mascota.persona.nombre }} {{ mascota.persona.apellidos }}</td>
+			{% if mascota.imagen %}
 			<td><img src="{{ mascota.imagen.url }}" style=" object-fit: contain;  width: 100%;  height: 100%;" ></td>
+			{% else %}
+				<td><img src="" alt=""></td>
+			{% endif %}
 			<td>
 				<a class="btn btn-primary" href="{% url 'mascota:mascota_editar' mascota.id %}">Editar</a>
 				<a class="btn btn-primary" href="{% url 'mascota:mascota_eliminar' mascota.id %}">Eliminar</a>
@@ -44,7 +48,11 @@
 			<td>{{ mascota.edad_aproximada }}</td>
 			<td>{{ mascota.fecha_rescate }}</td>
 			<td>{{ mascota.persona.nombre }} {{ mascota.persona.apellidos }}</td>
-			<td><img src="{{ mascota.imagen.url }}" style=" object-fit: contain;  width: 100%;  height: 100%;" ></td>
+			{% if mascota.imagen %}
+				<td><img src="{{ mascota.imagen.url }}" style=" object-fit: contain;  width: 100%;  height: 100%;" ></td>
+				{% else %}
+				<td><img src="" alt=""></td>
+			{% endif %}
 			<td>
 				<a class="btn btn-primary" href="{% url 'mascota:mascota_editardef' mascota.id %}">Editar</a>
 				<a class="btn btn-primary" href="{% url 'mascota:mascota_eliminardef' mascota.id %}">Eliminar</a>
