--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -55,6 +55,24 @@
 												<li><a href="{% url 'adopcion:solicitud_listardef'  %}">Listar solicitudes</a></li>
 											</ul>
 										</li>
+                                        <li class="dropdown">
+											<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">API Listar<span class="caret"></span></a>
+											<ul class="dropdown-menu" role="menu">
+												<li><a href="{% url 'mascota:mascota_listar_apiview'  %}">@api_view</a></li>
+                                                <li><a href="{% url 'mascota:mascota_listar_api'  %}">APIView</a></li>
+                                                <li><a href="{% url 'mascota:mascota_listar_generic'  %}">Generic ApiView</a></li>
+                                                <li><a href="{% url 'mascota:mascota_listar_viewset'  %}">ViewSet</a></li>
+											</ul>
+										</li>
+                                        <li class="dropdown">
+											<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">API Registrar<span class="caret"></span></a>
+											<ul class="dropdown-menu" role="menu">
+												<li><a href="{% url 'adopcion:solicitud_creardef'  %}">@api_view</a></li>
+                                                <li><a href="{% url 'adopcion:solicitud_creardef'  %}">APIView</a></li>
+                                                <li><a href="{% url 'adopcion:solicitud_creardef'  %}">Generic ApiView</a></li>
+                                                <li><a href="{% url 'adopcion:solicitud_creardef'  %}">ViewSet</a></li>
+											</ul>
+										</li>
 									</ul>
 									<ul class="nav navbar-nav navbar-right">
 										<li class="dropdown">
