--- a/templates/mascota/mascota_delete.html
+++ b/templates/mascota/mascota_delete.html
@@ -6,7 +6,7 @@
 <form method="post">
 	{% csrf_token %}
 	<h3>¿Desea eliminar el registro de {{ object.nombre }}</h3>
-	<button class="btm btn-danger" type="sumbit">Sí, eliminar</button>
+	<button class="btm btn-danger" type="submit">Sí, eliminar</button>
 	<a class="btn btn-default" href="{% url 'mascota:mascota_listar' %}">Cancelar</a>
 
 </form>
