--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -67,10 +67,10 @@
                                         <li class="dropdown">
 											<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">API Registrar<span class="caret"></span></a>
 											<ul class="dropdown-menu" role="menu">
-												<li><a href="{% url 'adopcion:solicitud_creardef'  %}">@api_view</a></li>
-                                                <li><a href="{% url 'adopcion:solicitud_creardef'  %}">APIView</a></li>
-                                                <li><a href="{% url 'adopcion:solicitud_creardef'  %}">Generic ApiView</a></li>
-                                                <li><a href="{% url 'adopcion:solicitud_creardef'  %}">ViewSet</a></li>
+												<li><a href="{% url 'mascota:mascota_crear_apiview'  %}">@api_view</a></li>
+                                                <li><a href="{% url 'mascota:mascota_crear_api'  %}">APIView</a></li>
+                                                <li><a href="{% url 'mascota:mascota_crear_generic'  %}">Generic ApiView</a></li>
+                                                <li><a href="{% url 'mascota:mascota_crear_viewset'  %}">ViewSet</a></li>
 											</ul>
 										</li>
 									</ul>
